@@ -8,6 +8,8 @@ Change log for zeit.web
 
 - MAINT: Add WAI-ARIA roles, states, and properties for accordion component
 
+- ZON-2175: Add ressort and kicker to meta keywords
+
 
 2.46 (2016-01-06)
 -----------------
